# python-boilerplate

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  check_types.yml  test.yml
my_cool_app/: __init__.py  __main__.py  constants.py  version.py
my_cool_app/my_cool_object/: __init__.py  my_object.py
my_cool_app/utils/: logger.py
scripts/: run-ci-local.sh  run-coverage.sh
tests/: conftest.py  test__meta.py  test_logger_unit.py  test_main.py
tests/my_cool_object/: test_my_cool_object.py
tests/utils/: test_logger.py
{{cookiecutter.__app_slug}}/: README.md  pyproject.toml
{{cookiecutter.__app_slug}}/.github/workflows/: check.yml  check_types.yml  test.yml
{{cookiecutter.__app_slug}}/tests/: conftest.py  test__meta.py  test_logger_unit.py  test_main.py  test_my_cool_object.py
{{cookiecutter.__app_slug}}/{{cookiecutter.__app_package}}/: __init__.py  __main__.py  logger.py  my_object.py
